Fixies and jump buttons

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ h3 {
     border: 0;
     color: #fff;
     display: flex;
-    font-size: 1.125rem;
+    font-size: 1.20rem;
     width: 85%;
     justify-content: space-evenly;
     cursor: pointer;
@@ -329,6 +329,16 @@ h3 {
     height: 400px;
     width: 80%;
     z-index: 90;
+}
+
+#frameLoadSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#iframeSection iframe {
+display: block; /* Make the iframe visible */
 }
 
 /* Mobile Display Screen */
