--- a/css/to-do.css
+++ b/css/to-do.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: system-ui, sans-serif;
+    font-family: poppins, sans-serif;
     box-sizing: border-box;
 }
 body {
@@ -59,7 +59,7 @@ button {
     color: #F4E5DB;
     font-size: 16px;
     cursor: pointer;
-    border-radius: 40px;
+    border-radius: 25px;
 }
 ul li {
     list-style: none;
